--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,11 +16,18 @@ Imports:
     broom,
     car,
     dplyr,
+    forcats,
+    ggplot2,
+    ggrepel,
     glue,
     magrittr,
     purrr,
+    recipes,
     rlang,
     stats,
+    stringr,
     tibble,
     tidyr,
-    tidyselect
+    tidyselect,
+    tidytext,
+    yardstick
