--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,59 @@
 
 export("%>%")
 export(aov_auto)
+export(geom_arrow_pca)
+export(geom_label_pca)
 export(parse_to_formula)
+export(pca_biplot)
+export(pca_load_plot)
+export(pca_scatter_plot)
+export(pca_scree_plot)
+export(prep_pca)
+importFrom(dplyr,all_of)
+importFrom(dplyr,filter)
+importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
+importFrom(dplyr,select)
+importFrom(forcats,as_factor)
+importFrom(forcats,fct_inorder)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,arrow)
+importFrom(ggplot2,facet_wrap)
+importFrom(ggplot2,geom_col)
+importFrom(ggplot2,geom_label)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_segment)
+importFrom(ggplot2,geom_text)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_fill_manual)
+importFrom(ggplot2,scale_fill_viridis_c)
+importFrom(ggplot2,unit)
+importFrom(ggrepel,geom_label_repel)
+importFrom(ggrepel,geom_text_repel)
+importFrom(glue,glue)
 importFrom(magrittr,"%>%")
+importFrom(purrr,keep)
+importFrom(recipes,juice)
+importFrom(recipes,prep)
+importFrom(recipes,recipe)
+importFrom(recipes,step_naomit)
+importFrom(recipes,step_normalize)
+importFrom(recipes,step_nzv)
+importFrom(recipes,step_pca)
+importFrom(recipes,update_role)
 importFrom(rlang,":=")
+importFrom(rlang,as_string)
+importFrom(rlang,enexpr)
+importFrom(rlang,ensym)
 importFrom(stats,formula)
 importFrom(stats,lm)
 importFrom(stats,p.adjust)
 importFrom(stats,setNames)
 importFrom(stats,shapiro.test)
+importFrom(stats,terms)
+importFrom(stringr,str_extract)
+importFrom(tidyr,pivot_wider)
+importFrom(tidytext,reorder_within)
+importFrom(tidytext,scale_y_reordered)
+importFrom(yardstick,tidy)
