--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(geom_label_pca)
 export(parse_to_formula)
 export(pca_biplot)
 export(pca_load_plot)
+export(pca_load_plot_all)
 export(pca_scatter_plot)
 export(pca_scree_plot)
 export(prep_pca)
