add `univar_multi_*()` functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,12 +5,16 @@ export(aov_auto)
 export(geom_arrow_pca)
 export(geom_label_pca)
 export(parse_to_formula)
+export(parse_to_formula_2s)
 export(pca_biplot)
 export(pca_load_plot)
 export(pca_load_plot_all)
 export(pca_scatter_plot)
 export(pca_scree_plot)
 export(prep_pca)
+export(univar_multi_bare)
+export(univar_multi_glance)
+export(univar_multi_tidy)
 importFrom(dplyr,all_of)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
